--- a/Work/gdms/index.html
+++ b/Work/gdms/index.html
@@ -80,14 +80,14 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>General Dynamics was a verry interesting coop for me. It was the furthest
-		 away for home i had to travel for work. The entire experience from living to 
-		 workpace culture was verry different from my past. I was a part of a very young
-		 and motivated team responsible for maintaining code running on one of Canada's 
-		 survailence aircrafts. Being a part of a firm that deals with controlled goods,
-		 I also got to learn a lot about how should be kept secure. Special notice was
-		 also given to documentation as a lot of the changes made would impact the 
-		 product for decades.</p>
+		<p>General Dynamics was a verry interesting co-op for me. It was the furthest
+			away for home I had to travel for work. From the living situation to 
+			workplace culture, the entire experience was verry different from my past. 
+			I was a part of a very young and motivated team responsible for maintaining
+			code running on one of Canada's surveillance aircrafts. Being a part of a 
+			firm that deals with controlled goods, I also got to learn a lot about how 
+			should be kept secure. Special notice was also given to documentation as 
+			a lot of the changes made would impact the product for decades.</p>
 	</div>
 	
 </body>
