http is now https

--- a/Projects/website/index.html
+++ b/Projects/website/index.html
@@ -16,19 +16,19 @@
 	<title>Prakhar Garg | My Website</title>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="http://prakhargarg.me/assets/data/sitemap.js"></script>
+	<script src="https://prakhargarg.me/assets/data/sitemap.js"></script>
 
 
 	<!-- Building the site -->
-	<script src="http://prakhargarg.me/HorizontalMenuBar/index.js"></script>
-	<script src="http://prakhargarg.me/populate.js"></script>
+	<script src="https://prakhargarg.me/HorizontalMenuBar/index.js"></script>
+	<script src="https://prakhargarg.me/populate.js"></script>
 
 	<!-- Event Handlers -->
 
 	<!-- Styling -->
-	<link href="http://prakhargarg.me/gridcontainer.css" rel="stylesheet" type="text/css">
-	<link href="http://prakhargarg.me/bootstrap.css" rel="stylesheet" type="text/css">
-	<script src="http://prakhargarg.me/bootstrap-4.5.0-dist/js/bootstrap.js"></script>
+	<link href="https://prakhargarg.me/gridcontainer.css" rel="stylesheet" type="text/css">
+	<link href="https://prakhargarg.me/bootstrap.css" rel="stylesheet" type="text/css">
+	<script src="https://prakhargarg.me/bootstrap-4.5.0-dist/js/bootstrap.js"></script>
 
 </head>
 
@@ -39,7 +39,7 @@
 		<p class="lead" id="company"></p>
 		<div class="container">
 	    	<h2>Project Description</h2>
-			<p>A an excuse for better learnign web development I decided to make a website to keep track of my work. The aim of the site was to showcase projects I have been a part of and and places I have worked. Conpared to <a href="http://prakhargarg.me/Education/webdesign/index.html">course I took at Ryerson</a>, this was a significantly more satisfying way to learn front end development.</p>
+			<p>A an excuse for better learnign web development I decided to make a website to keep track of my work. The aim of the site was to showcase projects I have been a part of and and places I have worked. Conpared to <a href="https://prakhargarg.me/Education/webdesign/index.html">course I took at Ryerson</a>, this was a significantly more satisfying way to learn front end development.</p>
 		</div>
 	</div>
 
