--- a/Interests/Photography/index.html
+++ b/Interests/Photography/index.html
@@ -16,24 +16,24 @@
 	<title>Prakhar Garg | About Me</title>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="http://prakhargarg.me/assets/data/sitemap.js"></script>
+	<script src="https://prakhargarg.me/assets/data/sitemap.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
 
 
 	<!-- Building the site -->
-	<script src="http://prakhargarg.me/HorizontalMenuBar/index.js"></script>
-	<script src="http://prakhargarg.me/populate.js"></script>
-	<script src="http://prakhargarg.me/assets/data/photoGallery.js"></script>
+	<script src="https://prakhargarg.me/HorizontalMenuBar/index.js"></script>
+	<script src="https://prakhargarg.me/populate.js"></script>
+	<script src="https://prakhargarg.me/assets/data/photoGallery.js"></script>
 	<script src="photoGallery.js"></script>
 
 	<!-- Event Handlers -->
 
 	<!-- Styling -->
-	<link href="http://prakhargarg.me/gridcontainer.css" rel="stylesheet" type="text/css">
-	<link href="http://prakhargarg.me/adjustments.css" rel="stylesheet" type="text/css">
-	<link href="http://prakhargarg.me/bootstrap.css" rel="stylesheet" type="text/css">
-	<script src="http://prakhargarg.me/bootstrap-4.5.0-dist/js/bootstrap.js"></script>
-	<link href="http://prakhargarg.me/assets/css/gallery.css" rel="stylesheet" type="text/css">
+	<link href="https://prakhargarg.me/gridcontainer.css" rel="stylesheet" type="text/css">
+	<link href="https://prakhargarg.me/adjustments.css" rel="stylesheet" type="text/css">
+	<link href="https://prakhargarg.me/bootstrap.css" rel="stylesheet" type="text/css">
+	<script src="https://prakhargarg.me/bootstrap-4.5.0-dist/js/bootstrap.js"></script>
+	<link href="https://prakhargarg.me/assets/css/gallery.css" rel="stylesheet" type="text/css">
 	<link href="index.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
 	
