--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 	<div name="AboutMe" class="container-fluid jumbotron" id="AboutMeText">
 		<div class="container">
-			<p>I am currently pursuing a Masters of Applied Science at McMaster Universoty, studying in the Estimation Tracking and Fusion lab. I have a passion for technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my past accomplishments and expand my knowledge on web development.</p>
+			<p>I am currently pursuing a Masters of Applied Science at McMaster University, studying in the Estimation Tracking and Fusion lab. I have a passion for technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my past accomplishments and expand my knowledge on web development.</p>
 		</div>
 	</div>
 	<div name="Education" class="container-fluid" id="Education">
