--- a/Interests/Origami/index.html
+++ b/Interests/Origami/index.html
@@ -1,113 +1,60 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--[if lt IE 7]> <html class="ie6 oldie"> <![endif]-->
 <!--[if IE 7]>    <html class="ie7 oldie"> <![endif]-->
 <!--[if IE 8]>    <html class="ie8 oldie"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class="">
 <!--<![endif]-->
+
+<html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Origami</title>
-<link href="index.css" rel="stylesheet" type="text/css">
-<link href="../Interests.css" rel="stylesheet" type="text/css">
-<!--<link href="../../SharedElements.css" rel="stylesheet" type="text/css">-->
-<link href="../../boilerplate.css" rel="stylesheet" type="text/css">
-<link href="../../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
-<script src="../../SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Prakahr Garg's portfolio website">
+	<meta name="author" content="Prakhar Garg">
+	
+	<title>Prakhar Garg | About Me</title>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://prakhargarg.me/assets/data/sitemap.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
+
+
+	<!-- Building the site -->
+	<script src="https://prakhargarg.me/HorizontalMenuBar/index.js"></script>
+	<script src="https://prakhargarg.me/populate.js"></script>
+	<script src="https://prakhargarg.me/assets/data/origami.js"></script>
+	<script src="https://prakhargarg.me/assets/js/photoGallery.js"></script>
+
+	<!-- Event Handlers -->
+
+	<!-- Styling -->
+	<link href="https://prakhargarg.me/gridcontainer.css" rel="stylesheet" type="text/css">
+	<link href="https://prakhargarg.me/adjustments.css" rel="stylesheet" type="text/css">
+	<link href="https://prakhargarg.me/bootstrap.css" rel="stylesheet" type="text/css">
+	<script src="https://prakhargarg.me/bootstrap-4.5.0-dist/js/bootstrap.js"></script>
+	<link href="https://prakhargarg.me/assets/css/gallery.css" rel="stylesheet" type="text/css">
+	<link href="index.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
+	
 </head>
-<body>
-<div class="Menu">
-  <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li>
-		<a href="../../index.html">
-			Home
-		</a>
-	</li>
-    <li><a class="MenuBarItemSubmenu" href="../../index.html#Interest" >Interests</a>
-		<ul>
-			<li><a href="../Origami/index.html">
-				Origami
-			</a></li>
-			<li><a href="../Travelling/index.html">
-				Travelling
-			</a></li>
-			<li><a href="../Robots/index.html">
-				Robots
-			</a></li>
-			<li><a href="../Photography/index.html">
-				Photography
-			</a></li>
-			</ul>
-	</li>
-	<li><a class="MenuBarItemSubmenu" href="../../index.html#Work" >Employment</a>
-		<ul>
-			<li><a href="../../Work/CAPREIT/index.html">
-				CAPREIT
-			</a></li>
-			<li><a href="../../Work/CTWorkshop/index.html">
-				Children's Technology Workshop
-			</a></li>
-		</ul>
-	</li>
-    <li><a class="MenuBarItemSubmenu" href="../../index.html#Project">Projects</a>
-      <ul>
-		<li><a href="../../Projects/EcoCAR/index.html">
-			McMaster EcoCar3
-		</a></li>
-		<li><a href="../../Projects/FormulaHybrid/index.html">
-			McMaster Formula Hybrid
-		</a></li>
-        <li><a href="../../Projects/Strangers/index.html">
-			Strangers App
-		</a></li>	
-		<li><a href="../../Projects/QuadSim/index.html">
-			QuadSIM
-		</a></li>	
-		<li><a href="../../Projects/SumoBot/index.html">
-			SumoBot
-		</a></li>		
-        <li><a class="MenuBarItemSubmenu" href="../../Projects/FIRST/index.html">FIRST Robotics</a>
-          <ul>
-            <li><a href="../../Projects/FIRST/index.html#2009">Blizzard X</a></li>
-            <li><a href="../../Projects/FIRST/index.html#2010">Blizzard XI</a></li>
-            <li><a href="../../Projects/FIRST/index.html#2011">Blizzard XII</a></li>
-            <li><a href="../../Projects/FIRST/index.html#2012">Blizzard XIII</a></li>
-          </ul>
-        </li>
-        <li><a href="../../Projects/VEX/index.html">
-			VEX Robotics
-		</a></li>
-        <li><a href="../../Projects/F1/index.html">
-				F1 in Schools
-		</a></li>
-        <li><a href="../../Projects/Skills/index.html">Skills Robotics</a></li>
 
-      </ul>
-    </li>
-    <li><a href="../../Contact/index.html">Contact</a></li>
-  </ul>
-</div>
 
-<div class="Block">
-  <h1>Origami</h1>
-  <object> 
-      <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F133001206%40N08%2Fsets%2F72157655404778998%2Fshow%2F&page_show_back_url=%2Fphotos%2F133001206%40N08%2Fsets%2F72157655404778998%2F&set_id=72157655404778998&jump_to="></param> 
-      <param name="movie" value="https://www.flickr.com/apps/slideshow/show.swf?v=1811922554"></param> 
-      <param name="allowFullScreen" value="true"></param>
-      <embed type="application/x-shockwave-flash" src="https://www.flickr.com/apps/slideshow/show.swf?v=1811922554" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F133001206%40N08%2Fsets%2F72157655404778998%2Fshow%2F&page_show_back_url=%2Fphotos%2F133001206%40N08%2Fsets%2F72157655404778998%2F&set_id=72157655404778998&jump_to=" width="100%" height="300">
-      	<p>
-        	looks like you don't have flash on this device. Click here to view the models. 
-        </p>
-    <!--    <iframe src="https://www.flickr.com/photos/133001206@N08/sets/72157655404778998#" width="100%" height="300px">
-        </iframe>-->
-      </embed>
-  </object>
-</div>
 
-        
-<script type="text/javascript">
-var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
-</script>
+
+
+<body onload=' addMenubar(); pullPhotos(photoGallery, "gallery");  baguetteBox.run(".gallery");'>
+	<div name="" class="container-fluid jumbotron" id="Intro">
+		<div class="container">
+	    	<h1> Photography</h1>
+			<p>A collection of some of my favorite photos</p>
+			<p></p>
+		</div>
+	</div>
+
+	<div name="" class="container gallery" id="gallery">
+	
+	</div>
 </body>
+
 </html>
