Origami gallery done but needs work

--- a/Interests/Origami/index.html
+++ b/Interests/Origami/index.html
@@ -46,8 +46,8 @@
 <body onload=' addMenubar(); pullPhotos(photoGallery, "gallery");  baguetteBox.run(".gallery");'>
 	<div name="" class="container-fluid jumbotron" id="Intro">
 		<div class="container">
-	    	<h1> Photography</h1>
-			<p>A collection of some of my favorite photos</p>
+	    	<h1>Origami</h1>
+			<p>A collection of some of my favorite folds.</p>
 			<p></p>
 		</div>
 	</div>
