--- a/Interests/Photography/index.html
+++ b/Interests/Photography/index.html
@@ -47,7 +47,7 @@
 	<div name="" class="container-fluid jumbotron" id="Intro">
 		<div class="container">
 	    	<h1> Photography</h1>
-			<p>A collection of some of my favorite photos</p>
+			<p>A collection of some of my favorite photos.</p>
 			<p></p>
 		</div>
 	</div>
