--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	<div name="Projects" class="container-fluid" id="Projects">
 		<div class="Title"><h1>Projects</h1></div>
 	</div>
-	<div class="divider" id="Projects-Community"></div>
+<!--	<div class="divider" id="Projects-Community"></div>
 	<div name="Community" class="container-fluid" id="Community">
 		<div class="Title"><h1>Community</h1></div>
 	</div>
@@ -451,7 +451,7 @@
 	</svg>
 
 	</div>
-	<div class="container-fluid" id="Bottom">
+-->	<div class="container-fluid" id="Bottom">
 		<div class="row">
 			<div name="Contact" class="col-sm-5" id="Contact">
 				<div class="Title"><h2>Contact</h2></div>
