uppdate credits on main page

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 			<div name="Credits" class="col-sm" id="Contact">
 				<h2>Credits</h2>
 				<p>
-					I would like to make a shoutout to everyone who has helped me in the creation of this website and the many projects that I have been a part of. All the content displayed on this website, with the exception to the logos of the organisations, companies and competitions, have been created by me with the exception of the photo of myself which was curtsey of Alpha Creation Studios. I however could not have accomplished this without the support of my friends, family and mentors.
+					I would like to make a shoutout to everyone who has helped me in the creation of this website and the many projects that I have been a part of. I could not have accomplished any of what is listed above without the support of my family, teachers, mentors, and friends.
 				</p>
 			</div>
 		</div>
