--- a/Projects/website/index.html
+++ b/Projects/website/index.html
@@ -65,7 +65,7 @@
 					<ul>
 						<li>Create a visually apealing site</li>
 						<li>Learn web development</li>
-						<li>lern how to use GIT</li>
+						<li>Learn how to use GIT</li>
 					</ul>
 				</div>
 		    </div>
