--- a/index.html
+++ b/index.html
@@ -50,34 +50,43 @@
 
 <body onload=' addMenubar(); populatesite();'>
 
-
+<!--
 	<div id="CarouselIndicators" class="carousel slide" data-ride="carousel">
-	  <ol class="carousel-indicators">
-	    <li data-target="#CarouselIndicators" data-slide-to="0" class="active"></li>
-	    <li data-target="#CarouselIndicators" data-slide-to="1"></li>
-	    <li data-target="#CarouselIndicators" data-slide-to="2"></li>
-	  </ol>
-	  <div class="carousel-inner">
-	    
-	    <div class="carousel-item active">
-	      <img class="d-block w-100" src="assets/photos/IMG_4475.jpg" alt="Second slide">
-	    </div>
-	    <div class="carousel-item">
-	      <img class="d-block w-100" src="assets/photos/IMG_5059.jpg" alt="Third slide">
-	    </div>
-	    <div class="carousel-item">
-	      <img class="d-block w-100" src="assets/photos/IMG_0311.jpg" alt="Third slide">
-	    </div>
+		<ol class="carousel-indicators">
+		  <li data-target="#CarouselIndicators" data-slide-to="0" class="active"></li>
+		  <li data-target="#CarouselIndicators" data-slide-to="1"></li>
+		  <li data-target="#CarouselIndicators" data-slide-to="2"></li>
+		</ol>
+		<div class="carousel-inner">
+		  
+		  <div class="carousel-item active">
+			<img class="d-block w-100" src="assets/photos/IMG_4475.jpg" alt="Second slide">
+		  </div>
+		  <div class="carousel-item">
+			<img class="d-block w-100" src="assets/photos/IMG_5059.jpg" alt="Third slide">
+		  </div>
+		  <div class="carousel-item">
+			<img class="d-block w-100" src="assets/photos/IMG_0311.jpg" alt="Third slide">
+		  </div>
+		</div>
+		<a class="carousel-control-prev" href="#CarouselIndicators" role="button" data-slide="prev">
+		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		  <span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#CarouselIndicators" role="button" data-slide="next">
+		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		  <span class="sr-only">Next</span>
+		</a>
 	  </div>
-	  <a class="carousel-control-prev" href="#CarouselIndicators" role="button" data-slide="prev">
-	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	    <span class="sr-only">Previous</span>
-	  </a>
-	  <a class="carousel-control-next" href="#CarouselIndicators" role="button" data-slide="next">
-	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	    <span class="sr-only">Next</span>
-	  </a>
-	</div>
+	  -->
+
+	  <div id="CarouselIndicators" class="carousel slide" data-ride="carousel">
+		<div class="carousel-inner">
+		  <div class="carousel-item active">
+			<img class="d-block w-100" src="assets/photos/IMG_4475.jpg" alt="Second slide">
+		  </div>
+		</div>
+	  </div>
 
   <div class="AboutMeSeparator" id="AboutMeSeperator">
     <svg class="separator__svg" width="100%" height="400" viewBox="0 0 100 100" preserveAspectRatio="none" fill="#1c1e22" version="1.1" xmlns="http://www.w3.org/2000/svg">
