Edit Masters Education

--- a/Education/masters/index.html
+++ b/Education/masters/index.html
@@ -39,7 +39,7 @@
 <body onload=' addMenubar();'>
 	<div name="" class="container-fluid jumbotron" id="Intro">
 		<h1>Masters of Applied Science</h1>
-		<p>I am currently pursuing a Masters of Applied Science at McMaster University, studying in the Estimation Tracking and Fusion lab. My Supervisors <a href="https://www.ece.mcmaster.ca/~kiruba/">Dr. Kirubarajan</a> and <a href="https://www.ece.mcmaster.ca/~thamas/">Dr. Tharmarasa</a> have helped me learn a lot about doing research. They also equipped me with all the tools needed to complete my studies.</p>
+		<p>I completed a Masters of Applied Science at McMaster University. I specialized in the Estimation Tracking and Fusion lab. My Supervisors <a href="https://www.ece.mcmaster.ca/~kiruba/">Dr. Kirubarajan</a> and <a href="https://www.ece.mcmaster.ca/~thamas/">Dr. Tharmarasa</a> have helped me learn a lot about doing research. They also equipped me with all the tools needed to complete my thesis in <a href="http://hdl.handle.net/11375/27329">Tracking Dismounts With Feature Matrix Based Multi-scale Intrinsic Motion Segmentation Framework (FM-MIMS)</a>.</p>
 	</div>
 	<div name="" class="container-fluid " id="Details">
 		<div class="container">
