--- a/Work/l3/index.html
+++ b/Work/l3/index.html
@@ -44,9 +44,16 @@
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-				<li>Assisted WESCAM’s Independent Stabilized Sighting Systems (MX-GCS) team develop new features for upcoming electro-optic and infrared vision system offerings.</li>
-				<li>Reduced time spent gathering field imagery by developing radiometrically realistic synthetic data generator to create pseudo-realistic scenes.</li>
-				<li>Developed core target detection algorithm using computer vision, machine learning, and pixel-wise image processing.</li>
+				<li>Spearheaded research, implementation, and evaluation of cutting-edge algorithms for camera-based embedded computer vision applications, encompassing object detection, target tracking, sensor fusion, and state estimation.</li>
+				<li>Leveraged machine learning models to enhance tracking precision during irregular camera operation, thus mitigating potential tracking errors and enhancing reliability.</li>
+				<li>Rigorously tested UI to meet customer-specified interface updates.</li>
+				<li>Collected and meticulously analyzed extensive test data to validate software functionality and hardware reliability in real-world flight tests.</li>
+				<li>Ensured all systems met stringent performance criteria, delivering exceptional results in critical flight scenarios.</li>
+				<li>Facilitated a productive liaison for a collaborative computer vision research initiative with McMaster University, focusing on small target detection and tracking.</li>
+
+				<li>Collaborated with WESCAM’s Independent Stabilized Sighting Systems (MX-GCS) team to innovate new features for forthcoming electro-optic and infrared vision system offerings.</li>
+				<li>Pioneered the development of a radiometrically realistic synthetic data generator, significantly reducing the time required to gather field imagery and creating pseudo-realistic scenes.</li>
+				<li>Engineered a cutting-edge core target detection algorithm, utilizing computer vision, machine learning, and pixel-wise image processing techniques.</li>
 			</ul>
 		</div>
 	</div>
@@ -57,10 +64,14 @@
 		    	<div id="ksa">
 					<h2>Knowledge, Skills and Abillities</h2>
 					<ul>
+						<li>Miltiplr Target Tracking</li>
+						<li>Sensor Fusion</li>
+						<li>State Estimation</li>
 						<li>Matlab</li>
 						<li>Digital image processing</li>
 						<li>Object detection</li>
 						<li>Machine learning</li>
+
 					</ul>
 				</div>
 				<div id="gsf">
