Update Teaching Assistant experience

--- a/Work/mcmasterTA/index.html
+++ b/Work/mcmasterTA/index.html
@@ -44,21 +44,21 @@
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-				<li>Provide formal supervision to students.</li>
-				<li>Coordinate curriculum with other teaching assistants that is to be covered in tutorial sessions.</li>
-				<li>Introduce and demonstrate labs or tutorial sessions to students.</li>
-				<li>Tutor students in programs and assist students with lab work.</li>
-				<li>Train students on proper lab techniques, operating laboratory equipment.</li>
-				<li>Ensuring that the appropriate course content information is made available to students.</li>
-				<li>Provide guidance, advice, and solutions to students.</li>
-				<li>Ensure accurate grading of assignments, tests and exams.</li>
-				<li>Correspond and meet with students to address concerns related to the course including, but not limited to, the resolution of contested grades.</li>
-				<li>Liaise with instructors and students to ensure information within the academic unit is understood by all parties.</li>
-				<li>Operate, adjust, and maintain a variety of equipment and instruments.</li>
-				<li>Troubleshoot equipment and perform minor repairs. Ensure major repair requests are escalated to the appropriate area.</li>
-				<li>Collect, track, and safeguard student marks and tests.</li>
-				<li>Calculate student marks and submit final grades to appropriate areas.</li>
-				<li>Input, maintain, and verify information in a variety of databases and spreadsheets.</li>
+				<li>Supervised and mentored a team of students, providing formal guidance and support.</li>
+				<li>Collaborated with fellow teaching assistants to synchronize the curriculum for tutorial sessions.</li>
+				<li>Conducted engaging and informative lab sessions, effectively demonstrating concepts to students.</li>
+				<li>Offered personalized tutoring to students, aiding them in program comprehension and lab work.</li>
+				<li>Trained students in precise laboratory techniques and the operation of specialized equipment.</li>
+				<li>Ensured the timely and comprehensive availability of course materials to enhance student learning.</li>
+				<li>Offered expert guidance, advice, and innovative solutions to students, fostering their academic growth.</li>
+				<li>Maintained rigorous accuracy in grading assignments, tests, and exams.</li>
+				<li>Proactively communicated with and met students to address course-related concerns, including grade disputes, fostering a positive learning environment.</li>
+				<li>Collaborated with instructors and students, promoting a clear understanding of academic unit information among all stakeholders.</li>
+				<li>Operated, adjusted, and maintained a diverse range of equipment and instruments.</li>
+				<li>Skillfully troubleshooted equipment issues, conducting minor repairs, and promptly escalating major repair requests.</li>
+				<li>Efficiently collected, managed, and safeguarded student records, ensuring data accuracy and confidentiality.</li>
+				<li>Calculated student grades with precision and submitted final grades to relevant authorities.</li>
+				<li>Maintained and verified data in multiple databases and spreadsheets to support administrative functions.</li>
 			</ul>
 		</div>
 	</div>
