--- a/Work/mcmasterTA/index.html
+++ b/Work/mcmasterTA/index.html
@@ -96,14 +96,11 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>I absolutely loved teaching. It is a lot of fun to demonstrate
-		 new concepts and help challenge students to do their best. I have
-		  found that being a teaching assistant has helped me understand the
-		   concepts alot better as i need to be able to answer any questions.
-		    Instructional hours are amazing however, marking assignemtns and
-		     exams can be quite draining. It has helped me develop and eye for
-		      detail and catch major and minor errors in calculations. Being
-		       a teaching assistant has been an amazing learning experience for me.</p>
+		<p>I thoroughly enjoyed my role as a teaching assistant. It was immensely rewarding to impart new concepts and inspire students to strive for excellence. I've come to realize that being a teaching assistant significantly enhanced my grasp of the subject matter, as I needed to be prepared to address any inquiries.
+
+			While instructional hours were fulfilling, the process of grading assignments and exams could be quite demanding. Nonetheless, it afforded me the opportunity to develop a keen eye for detail, enabling me to identify both major and minor errors in calculations.
+			
+			Overall, serving as a teaching assistant has been an invaluable learning experience for me.</p>
 	</div>
 	
 </body>
