update SPecial Projects Assistant

--- a/Work/mcmasterSPA/index.html
+++ b/Work/mcmasterSPA/index.html
@@ -44,9 +44,11 @@
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-				<li>Assist the Engineering Dean’s Office to manage the planning and logistics of hosting large outreach events.</li>
-				<li>Organized a district level Robotics Competition for over 1200 high school students.</li>
-				<li>Coordinated resources with McMaster and FIRST Robotics staff.</li>
+
+				<li>Collaborated with the Engineering Dean's Office to oversee the strategic planning and logistical execution of major outreach events.</li>
+				<li>Successfully orchestrated a high-profile District-level Robotics Competition, accommodating more than 1200 high school participants.</li>
+				<li>Skillfully coordinated resources and fostered productive partnerships with both McMaster University and FIRST Robotics staff to ensure seamless event operations.</li>
+
 			</ul>
 		</div>
 	</div>
@@ -78,15 +80,9 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>I absolutely loved this job. The team i got to work with what
-		 an awesome group of tallented people. I got to learn a lot about
-		 networking and developing proper communiantion and managment skills
-		 through them. One of the greatest challenges i encountered at this
-		 job was to communicate with many different parties and ensuring they
-		 all get what they want out of the organized events. SOmtime there were
-		 conflicting opinions and required creative solutions. I am glad to
-		 have the opportunity and creative freedom to help develop the projects
-		 as seen fit.</p>
+		<p>I thoroughly enjoyed my tenure in this role. The team I had the privilege of working with comprised exceptionally talented individuals. My time here provided me with valuable insights into networking, as well as the development of effective communication and management skills.
+
+			One of the most significant challenges I encountered during my tenure was the need to coordinate and communicate effectively with various stakeholders, ensuring their objectives were met in our organized events. At times, conflicting opinions emerged, necessitating creative and diplomatic solutions. I am appreciative of the opportunity and creative latitude I was given to contribute to project development in alignment with our vision.</p>
 	</div>
 	
 </body>
