update gdms experience

--- a/Work/gdms/index.html
+++ b/Work/gdms/index.html
@@ -44,10 +44,12 @@
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-				<li>Assisted GDMS’s Block 3 team on the CP-140 Aurora project.</li>
-				<li>Developed a tool to relay automated test results and sprint summary to the team.</li>
-				<li>Researched and implemented attitude interpolation algorithm to reduce bandwidth usage.</li>
-				<li>Wrote automated test to verify LRF altitude measurements from the MX-20 using Robot Framework and Python. </li>
+
+				<li>Collaborated with GDMS’s Block 3 team on the CP-140 Aurora project, gaining valuable experience in aerospace technology.</li>
+				<li>Designed and developed a custom tool to efficiently communicate automated test results and sprint summaries within the team.</li>
+				<li>Conducted extensive research and successfully implemented an attitude interpolation algorithm, significantly optimizing bandwidth usage.</li>
+				<li>Demonstrated technical proficiency by creating automated tests to verify Laser Range Finder (LRF) altitude measurements from the MX-20 using Robot Framework and Python.</li>
+
 			</ul>
 		</div>
 	</div>
@@ -80,14 +82,9 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>General Dynamics was a verry interesting co-op for me. It was the furthest
-			away for home I had to travel for work. From the living situation to 
-			workplace culture, the entire experience was verry different from my past. 
-			I was a part of a very young and motivated team responsible for maintaining
-			code running on one of Canada's surveillance aircrafts. Being a part of a 
-			firm that deals with controlled goods, I also got to learn a lot about how 
-			should be kept secure. Special notice was also given to documentation as 
-			a lot of the changes made would impact the product for decades.</p>
+		<p>My co-op experience at General Dynamics proved to be both intriguing and enlightening. It marked the furthest distance I had traveled from home for work, and the entire experience, from my living arrangements to the workplace culture, was notably distinct from my previous experiences.
+
+			I had the privilege of working within a highly motivated, youthful team tasked with the maintenance of critical code running on one of Canada's surveillance aircraft. Working in a company that deals with controlled goods, I gained valuable insights into the stringent security protocols required to safeguard such sensitive materials. Additionally, a strong emphasis was placed on meticulous documentation, as many of the changes implemented would have far-reaching impacts on the product for decades to come.</p>
 	</div>
 	
 </body>
