update research assistant

--- a/Work/mcmasterRA/index.html
+++ b/Work/mcmasterRA/index.html
@@ -44,10 +44,9 @@
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-				<li>Assist With the development of a sensor fusion app.</li>
-				<li>Develop database to store various types of sensor information.</li>
-				<li>Research existing techniques for submarine detection.</li>
-				<li>Understand Image and point could processing algorithms.</li>
+				<li>Played a pivotal role in the development of a sensor fusion platform for the ETF Lab, contributing to advancements in tracking technology.</li>
+				<li>Designed and implemented a robust NoSQL Database utilizing MongoDB and Node.JS, enhancing data management capabilities.</li>
+				<li>Conducted comprehensive testing of web-based tracking software in active development, ensuring reliability and performance.</li>
 			</ul>
 		</div>
 	</div>
@@ -81,10 +80,8 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>This was a very interesting experience for me as it gave a small taste
-		 of what was to come with my Masters. I got to learn form many smart and
-		  talented individuals in my lab. Communicating with our sponsors helped
-		   me better understand what research areas interest the industry.</p>
+		<p>
+			This experience was truly enlightening and served as a prelude to my Master's journey. It afforded me the privilege of learning from a group of exceptionally intelligent and talented individuals within my lab. Additionally, engaging in communication with our sponsors provided me with valuable insights into the research areas that pique the interest of the industry.</p>
 	</div>
 	
 </body>
