update research assistant job

--- a/Work/mcmasterRA/index.html
+++ b/Work/mcmasterRA/index.html
@@ -58,9 +58,11 @@
 					<h2>Knowledge, Skills and Abillities</h2>
 					<ul>
 						<li>C++</li>
+						<li>Matlab</li>
 						<li>Machine Learning</li>
 						<li>Submarine Detection</li>
 						<li>Video Tracking</li>
+						<li>Sensor Fusion</li>
 						<li>non-SQL Databasing</li>
 					</ul>
 				</div>
